--- a/src/minesweeper/board.fxml
+++ b/src/minesweeper/board.fxml
@@ -11,6 +11,8 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 <AnchorPane fx:id="mainAnchorPane" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="minesweeper.Controller">
   <VBox fx:id="mainVBox">
     <MenuBar>
@@ -31,6 +33,13 @@
       </Menu>
     </MenuBar>
       <AnchorPane prefHeight="343.0" prefWidth="420.0">
+        <Text fx:id="title" layoutX="55.0" layoutY="40.0" stroke="black" text="Welcome to Minesweeper" >
+          <font> <Font name="Arial" size="20.0" /> </font>
+        </Text>
+        <Button fx:id="easyGameButton" layoutX="70.0" layoutY="70.0" prefWidth="200" text="Easy (9x9, 10 mines)" onAction="#easyGame" />
+        <Button fx:id="normalGameButton" layoutX="70.0" layoutY="110.0" prefWidth="200" text="Normal (16x16, 40 mines)" onAction="#normalGame" />
+        <Button fx:id="hardGameButton" layoutX="70.0" layoutY="150.0" prefWidth="200" text="Hard (20x25, 99 mines)" onAction="#hardGame" />
+        <Button fx:id="customGameButton" layoutX="70.0" layoutY="190.0" prefWidth="200" text="Create custom game" onAction="#customGame" />
         <Label fx:id="labelHeight" layoutX="15.0" layoutY="5.0" text="Height:" visible="false" />
         <Label fx:id="labelWidth" layoutX="85.0" layoutY="5.0" text="Width:" visible="false" />
         <Label fx:id="labelMines" layoutX="155.0" layoutY="5.0" text="Mines:" visible="false" />
