--- a/src/minesweeper/board.fxml
+++ b/src/minesweeper/board.fxml
@@ -32,7 +32,7 @@
         <MenuItem mnemonicParsing="false" onAction="#aboutWindow" text="About" />
       </Menu>
     </MenuBar>
-      <AnchorPane prefHeight="343.0" prefWidth="420.0">
+      <AnchorPane fx:id="anchorPane" prefHeight="343.0" prefWidth="420.0">
         <Text fx:id="title" layoutX="55.0" layoutY="40.0" stroke="black" text="Welcome to Minesweeper" >
           <font> <Font name="Arial" size="20.0" /> </font>
         </Text>
@@ -53,11 +53,11 @@
         <Label fx:id="minesLabel" layoutY="25.0" visible="false" />
         <Label fx:id="msgLabel" layoutY="5.0" visible="false" />
         <Button fx:id="newGameButton" layoutY="25.0" mnemonicParsing="false" text="New Game" visible="false" />
-          <GridPane fx:id="gameGridPane" alignment="TOP_CENTER" layoutY="50.0" hgap="1.0" vgap="1.0">
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-          </GridPane>
+        <GridPane fx:id="gameGridPane" alignment="TOP_CENTER" layoutY="50.0" hgap="1.0" vgap="1.0">
+          <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+          </padding>
+        </GridPane>
       </AnchorPane>
   </VBox>
 </AnchorPane>
