--- a/src/minesweeper/board.fxml
+++ b/src/minesweeper/board.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <AnchorPane fx:id="mainAnchorPane" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="minesweeper.Controller">
-  <VBox fx:id="mainVBox">
+  <VBox>
     <MenuBar>
       <Menu mnemonicParsing="false" text="Game">
         <Menu mnemonicParsing="false" text="New Game">
@@ -32,7 +32,7 @@
         <MenuItem mnemonicParsing="false" onAction="#aboutWindow" text="About" />
       </Menu>
     </MenuBar>
-      <AnchorPane fx:id="anchorPane" prefHeight="420.0" prefWidth="343.0">
+      <AnchorPane prefHeight="420.0" prefWidth="343.0">
         <Text fx:id="title" layoutX="55.0" layoutY="40.0" stroke="black" text="Welcome to Minesweeper" >
           <font> <Font name="Arial" size="20.0" /> </font>
         </Text>
