--- a/src/minesweeper/board.fxml
+++ b/src/minesweeper/board.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+
 <AnchorPane fx:id="mainAnchorPane" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="minesweeper.Controller">
   <VBox>
     <MenuBar>
@@ -23,7 +23,7 @@
           <MenuItem mnemonicParsing="false" onAction="#hardGame" text="Hard (20x25, 99 mines)" />
           <MenuItem mnemonicParsing="false" onAction="#customGame" text="Custom" />
         </Menu>
-        <MenuItem mnemonicParsing="false" text="Settings" />
+        <MenuItem mnemonicParsing="false" onAction="#optionsWindow" text="Options" />
         <MenuItem mnemonicParsing="false" onAction="#scoresWindow" text="Best scores" />
         <MenuItem mnemonicParsing="false" onAction="#handleQuit" text="Exit Game" />
       </Menu>
@@ -52,7 +52,8 @@
         <Label fx:id="mLabel" layoutY="5.0"  text="Mines" visible="false" />
         <Label fx:id="minesLabel" layoutY="25.0" visible="false" />
         <Label fx:id="msgLabel" layoutY="5.0" visible="false" />
-        <Button fx:id="newGameButton" layoutY="25.0" mnemonicParsing="false" text="New Game" visible="false" />
+        <Button fx:id="newGameButton" layoutY="03.0" mnemonicParsing="false" text="New Game" visible="false" />
+        <Button fx:id="pauseButton" layoutY="32.0" mnemonicParsing="false" text="Pause" visible="false" />
         <GridPane fx:id="gameGridPane" alignment="TOP_CENTER" layoutY="50.0" hgap="1.0" vgap="1.0">
           <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
