--- a/src/minesweeper/board.fxml
+++ b/src/minesweeper/board.fxml
@@ -52,8 +52,8 @@
         <Label fx:id="mLabel" layoutY="5.0"  text="Mines" visible="false" />
         <Label fx:id="minesLabel" layoutY="25.0" visible="false" />
         <Label fx:id="msgLabel" layoutY="30.0" visible="false" />
-        <Button fx:id="newGameButton" layoutY="03.0" mnemonicParsing="false" text="New Game" visible="false" />
-        <Button fx:id="pauseButton" layoutY="30.0" mnemonicParsing="false" text="Pause" visible="false" />
+        <Button fx:id="newGameButton" layoutY="03.0" prefWidth="100.0" mnemonicParsing="false" text="New Game" visible="false" />
+        <Button fx:id="pauseButton" layoutY="30.0" prefWidth="100.0" mnemonicParsing="false" text="Pause" visible="false" />
         <GridPane fx:id="gameGridPane" alignment="TOP_CENTER" layoutY="50.0" hgap="1.0" vgap="1.0">
           <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
