--- a/src/minesweeper/board.fxml
+++ b/src/minesweeper/board.fxml
@@ -6,12 +6,12 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.control.ComboBox?>
 
 <AnchorPane fx:id="mainAnchorPane" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="minesweeper.Controller">
   <VBox>
@@ -43,9 +43,9 @@
         <Label fx:id="labelRows" layoutX="15.0" layoutY="5.0" text="Rows:" visible="false" />
         <Label fx:id="labelColumns" layoutX="85.0" layoutY="5.0" text="Columns:" visible="false" />
         <Label fx:id="labelMines" layoutX="155.0" layoutY="5.0" text="Mines:" visible="false" />
-        <TextField fx:id="boardRows" layoutX="10.0" layoutY="25.0" prefHeight="25.0" prefWidth="50.0" visible="false" />
-        <TextField fx:id="boardColumns" layoutX="80.0" layoutY="25.0" prefHeight="25.0" prefWidth="50.0" visible="false" />
-        <TextField fx:id="boardMines" layoutX="150.0" layoutY="25.0" prefHeight="25.0" prefWidth="50.0" visible="false" />
+        <ComboBox fx:id="comboRows" layoutX="10.0" layoutY="25.0" prefHeight="25.0" prefWidth="65.0" visible="false" />
+        <ComboBox fx:id="comboCols" layoutX="80.0" layoutY="25.0" prefHeight="25.0" prefWidth="65.0" visible="false" />
+        <ComboBox fx:id="comboMines" layoutX="150.0" layoutY="25.0" prefHeight="25.0" prefWidth="65.0" visible="false" />
         <Button fx:id="createButton" layoutX="220.0" layoutY="25.0" mnemonicParsing="false" onAction="#createCustomGame" text="Create board" visible="false" />
         <Label fx:id="tLabel" layoutX="20.0" layoutY="5.0" text="Time" visible="false" />
         <Label fx:id="timeLabel" layoutX="20.0" layoutY="25.0" visible="false" />
